# semantic-dog

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  compose.example.yaml  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: release.sh
semanticdog/: __init__.py  cli.py  config.py  config_store.py  db.py  exceptions.py  mcp_server.py  notify.py  runtime.py  scanner.py  server.py
semanticdog/services/: diagnostics.py  scan_manager.py  scheduler.py
semanticdog/validators/: __init__.py  base.py  documents.py  images.py  media.py  raw.py
semanticdog/web/: __init__.py
semanticdog/web/static/: app.css  app.js
semanticdog/web/templates/: base.html  config.html  dashboard.html  history.html  issues.html  setup.html
tests/: conftest.py  test_auth.py  test_cli.py  test_config.py  test_config_store.py  test_db.py  test_diagnostics.py  test_document_validators.py  test_e2e.py  test_image_validators.py  test_media_validators.py  test_notify.py  test_playwright_e2e.py  test_raw_validators.py  test_scan_manager.py  test_scanner.py  test_scheduler.py  test_server.py  test_stage1.py  test_validators_base.py  test_web_ui.py
tests/fixtures/: generators.py
